; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_clear.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oid_array = type { i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oid_array_clear(%struct.oid_array* %0) #0 {
  %2 = alloca %struct.oid_array*, align 8
  store %struct.oid_array* %0, %struct.oid_array** %2, align 8
  %3 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %4 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 8
  %6 = call i32 @FREE_AND_NULL(i32 %5)
  %7 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %8 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %10 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %12 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @FREE_AND_NULL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
